added some module infos